--- a/Project 1/Part 1 - Exploration and Data Cleaning.ipynb
+++ b/Project 1/Part 1 - Exploration and Data Cleaning.ipynb
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -702,29 +702,29 @@
        "9     7420         50.0     118000"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataTrainClean=dataTrainNum[['LotArea','LotFrontage','SalePrice']][prices.allRangeIndex(areaStd[0],frontStd[0],priceStd[0])]\n",
+    "dataTrainClean=dataTrainNum[['LotArea','LotFrontage','SalePrice']][(dataTrainNum['LotArea'].values<=20500)*(dataTrainNum['SalePrice'].values<=400000)]\n",
     "dataTrainClean[:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We lost about 3.22% of the data due to cleaning,\n",
-      "our clean data thus represents about 96.8% of the given data.\n",
+      "We lost about 5.07% of the data due to cleaning,\n",
+      "our clean data thus represents about 94.9% of the given data.\n",
       "\n",
-      "We have 1413 remaining examples for training\n"
+      "We have 1386 remaining examples for training\n"
      ]
     }
    ],
@@ -739,13 +739,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write clean data to a file for fitting\n",
     "\n",
     "dataTrainClean.to_pickle(\"Clean Training Data.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20494.67418763989"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prices.unstandardize(1,areaStd[1],areaStd[2])"
    ]
   },
   {
