--- a/Project 1/Part 2 - Model Forming and Training.ipynb
+++ b/Project 1/Part 2 - Model Forming and Training.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "I still need to use this to fix \"fitmodels\" so hang tight!"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -138,20 +131,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 1.   , -0.286, -0.2  ],\n",
-       "       [ 1.   , -0.01 ,  0.622],\n",
-       "       [ 1.   ,  0.387, -0.036],\n",
-       "       [ 1.   , -0.022, -0.475],\n",
-       "       [ 1.   ,  1.11 ,  0.842]])"
+       "array([[ 1.   , -0.253],\n",
+       "       [ 1.   ,  0.095],\n",
+       "       [ 1.   ,  0.596],\n",
+       "       [ 1.   ,  0.08 ],\n",
+       "       [ 1.   ,  1.509]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,25 +153,25 @@
     "# To access values of varStd, use varStd[0]\n",
     "\n",
     "areaStd,frontStd,priceStd=prices.standardize(training.values[:,0],training.values[:,1],training.values[:,2])\n",
-    "designMatrix=prices.np.array([prices.np.ones(len(training)),areaStd[0],frontStd[0]]).T # ,frontStd[0]\n",
+    "designMatrix=prices.np.array([prices.np.ones(len(training)),areaStd[0]]).T # ,frontStd[0]\n",
     "designMatrix[:5].round(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error Vector:  [ 0.005  1.51   0.617 ... -0.67   1.472  1.828]\n",
-      "Maximum Error:  11.53 \n",
+      "Error Vector:  [ 0.215  0.975  0.836 ... -0.489  1.611  1.595]\n",
+      "Maximum Error:  5.05 \n",
       "\n",
-      "Base Loss:  5155.0 \n",
+      "Base Loss:  3068.0 \n",
       "\n",
-      "Initial Update:  [0.6 0.7 0.7]\n"
+      "Initial Update:  [0.6 0.3]\n"
      ]
     }
    ],
@@ -205,7 +198,7 @@
     "learn=2e-4\n",
     "\n",
     "# Try using 0.35\n",
-    "hist=0.35\n",
+    "hist=0\n",
     "\n",
     "iteration=1\n",
     "loss_last=0\n",
@@ -219,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -230,7 +223,7 @@
      "text": [
       "DONE! \n",
       "\n",
-      "Final Iteration:  8   Final Loss:  1190.13   Base Loss:  5154.67\n"
+      "Final Iteration:  12   Final Loss:  1171.72   Base Loss:  3068.06\n"
      ]
     }
    ],
@@ -265,15 +258,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.00040453 0.19952275 0.2559214 ]\n",
-      "[-2.29908783e+05  3.18800000e+00  9.33965000e+02]\n"
+      "[6.12833060e-05 3.93234566e-01]\n",
+      "[-1.1253592e+04  7.8290000e+00]\n"
      ]
     }
    ],
@@ -286,12 +279,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#with open(\"fitmodels.py\",\"a\") as file:\n",
-    "#    prices.func_print(weights,'areaFront_nesterov',file)"
+    "# Create Model function and write to fitmodels module\n",
+    "\n",
+    "with open(\"fitmodels.py\",\"a\") as file:\n",
+    "    prices.func_print(weights,'area',file)"
    ]
   },
   {
